# EP

./: .gitignore
lab01/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  random.cpp  random.hpp  simulate.cpp  simulate.hpp
lab01/docs/: 00-title-page.tex  preamble.tex  report.tex
lab02/: CMakeLists.txt  README.md  experiment.cpp  experiment.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  random.cpp  simulate.hpp  statistics.cpp
lab02/docs/: 00-title-page.tex  report.tex
lab03/: CMakeLists.txt  README.md  combinatorics.cpp  combinatorics.hpp  experiment.cpp  experiment.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  random.hpp  simulate.cpp  simulate.hpp
lab03/docs/: preamble.tex  report.tex
lab04/: CMakeLists.txt  README.md  experiment.cpp  experiment.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  simulate.hpp  statistics.hpp
lab04/docs/: 00-title-page.tex  preamble.tex  report.tex
qcustomplot/: qcustomplot.h
